RESOLVED FIXED157609
TextIteratorStopsOnFormControls is never used
https://bugs.webkit.org/show_bug.cgi?id=157609
Summary TextIteratorStopsOnFormControls is never used
Ryosuke Niwa
Reported 2016-05-11 22:09:59 PDT
TextIteratorStopsOnFormControls is only used in SurroundingText.cpp but this file is not used in any port. This must be a left over from Chromium port.
Attachments
Cleanup (9.06 KB, patch)
2016-05-11 22:14 PDT, Ryosuke Niwa
achristensen: review+
Ryosuke Niwa
Comment 1 2016-05-11 22:14:06 PDT
Alex Christensen
Comment 2 2016-05-11 23:20:53 PDT
Comment on attachment 278697 [details] Cleanup View in context: https://bugs.webkit.org/attachment.cgi?id=278697&action=review > Source/WebCore/editing/TextIterator.cpp:1189 > + : m_behavior(TextIteratorDefaultBehavior) m_behavior { TextIteratorDefaultBehavior } in the header. Same with a lot of these.
Ryosuke Niwa
Comment 3 2016-05-11 23:46:44 PDT
Note You need to log in before you can comment on or make changes to this bug.