TextIteratorStopsOnFormControls is never used https://bugs.webkit.org/show_bug.cgi?id=157609

Reviewed by Alex Christensen.

Removed SurroundingText.cpp and TextIteratorStopsOnFormControls from TextIterator as they're no longer used.

* editing/SurroundingText.cpp: Removed.
* editing/TextIterator.cpp:
(WebCore::TextIterator::advance):
(WebCore::TextIterator::exitNode):
(WebCore::SimplifiedBackwardsTextIterator::SimplifiedBackwardsTextIterator):
(WebCore::SimplifiedBackwardsTextIterator::advance):
(WebCore::characterSubrange):
(WebCore::BackwardsCharacterIterator::BackwardsCharacterIterator):
* editing/TextIterator.h:
(WebCore::SimplifiedBackwardsTextIterator::atEnd):
* editing/TextIteratorBehavior.h:


Canonical link: https://commits.webkit.org/175745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200744 268f45cc-cd09-0410-ab3c-d52691b4dbfc